Fix top-alignment of section paragraphs

--- a/resume.css
+++ b/resume.css
@@ -115,7 +115,7 @@ h3 {
 }
 
 p {
-    margin: .6em 0 16px;
+    margin: 0 0 16px;
     padding: 0;
     display: block;
     font-size: 104%;
