--- a/screen.css
+++ b/screen.css
@@ -124,7 +124,7 @@
     ol {
         float: left;
         width: 84%;
-        margin: .6em 0 0;
+        margin: 0;
     }
 
     ol li {
